# netsci

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: chap_02.doctree  chap_03.doctree  chap_04.doctree  quick_guide_igraph.doctree  quick_guide_networkx.doctree
.doctrees/nbsphinx/examples/: chap_04.ipynb
.github/workflows/: documents.yml
_modules/: index.html
_modules/netsci/: analysis.html  plot.html  utils.html
_sources/: index.rst.txt
_sources/examples/: quick_guide_igraph.ipynb.txt  quick_guide_networkx.ipynb.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst  quick_start.py
docs/examples/: chap_02.ipynb  chap_03.ipynb  chap_04.ipynb  helpers.py  quick_guide_igraph.ipynb  quick_guide_networkx.ipynb  quick_start.py
examples/: chap_02.html  chap_02.ipynb  chap_03.html  chap_03.ipynb  chap_04.html  chap_04.ipynb  quick_guide_igraph.html  quick_guide_igraph.ipynb  quick_guide_networkx.html  quick_guide_networkx.ipynb  quick_start.py
netsci/: __init__.py  analysis.py  plot.py  utils.py
netsci/datasets/: README.md  sample_graphs.json
netsci/tests/: test_analysis.py  tests_suit.py
