[build-system]
requires = ["setuptools", "wheel", "nbconvert"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "netsci"
version = "0.1.0"
description = "Provide codes for Network Science book from Barabasi"
authors = [
    { name="Abolfazl Ziaeemehr", email="a.ziaeemehr@gmail.com" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.urls]
homepage = "https://example.com"
repository = "https://github.com/Ziaeemehr/netsci"
