[build-system]
requires = [
    "hatchling",
    "setuptools", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "netsci"
# version = "0.0.2"
dynamic = ['version']
description = "Provide codes for Network Science book from Barabasi, 2013"
authors = [
    { name = "Abolfazl Ziaeemehr", email = "a.ziaeemehr@gmail.com" },
]
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "nbconvert",
    "numpydoc",
    "matplotlib",
    "seaborn",
    "setuptools-scm",
    "powerlaw",
    "tqdm",
    "python-igraph"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://ziaeemehr.github.io/netsci/"
repository = "https://github.com/Ziaeemehr/netsci"

[tool.hatch.version]
path = "netsci/_version.py"
